shift to using external style

--- a/seed_app.html
+++ b/seed_app.html
@@ -4,32 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OMG Web5.js App</title>
-    <style>
-      body {
-        font-family: 'Press Start 2P', cursive;
-        background-color: yellow;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-        margin-top: 1rem;
-      }
-      label {
-        font-size: 1.2rem;
-      }
-      input {
-        font-family: 'Press Start 2P', cursive;
-        font-size: 1.2rem;
-        margin-bottom: 1rem;
-      }
-      button {
-        font-family: 'Press Start 2P', cursive;
-        font-size: 1.2rem;
-      }
-    </style>
+    <link href="https://cdn.jsdelivr.net/gh/TBD54566975/web5-omg@main/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
   </head>
 
