--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
       </div>
     </div>
     <div class="editor-wrapper">
-      <textarea class="editor" placeholder="Add your instructions of how to build or modify app here and press return. Press show/hide to see source code. eg: 'build an app that shows a list of todo items'"></textarea>
+      <textarea class="editor" placeholder="Add your instructions of how to build or modify app here and press return. 
+
+Example prompt: 'build an app that shows a list of todo items'
+
+Press show/hide to see source code. 
+"></textarea>
     </div>
     <button id="toggle-output">Click here to Show/Hide generated web5 source code</button>
     <script>
