added another example

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <div class="editor-wrapper">
       <textarea class="editor" placeholder="Add your instructions of how to build or modify app here and press return. 
 
-Example prompt: 'build an app that shows a list of todo items'
+Example prompts: 
+  'build an app that shows a list of todo items'
+  'Write an app that stores my name, birthday and favourite season of the year (make it a dropdown)'
 
 Press show/hide to see source code. 
 "></textarea>
