--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Press show/hide to see source code.
     </div>
 
     <div class="docs">
-      <a href="" target="_blank">👉 Show web component builder</a>
+      <a href="/component-builder" target="_blank">👉 Show web⑤ component builder</a>
     </div>
 
     </div>
