add github rubbon and favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>Web5 App maker</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
+    <link rel="icon" href="https://www.tbd.website/images/tbd-fav-icon-main.png" />
     <style>
       body {
         display: flex;
@@ -96,6 +99,7 @@
     </style>
   </head>
   <body>
+    <a class="github-fork-ribbon" href="https://github.com/TBD54566975/web5-omg" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
     <div class="main-wrapper">
       <div class="preview-wrapper">
         <iframe class="preview"></iframe>
