--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <link rel="icon" href="https://www.tbd.website/images/tbd-fav-icon-main.png" />
+    
     <style>
       body {
         display: flex;
@@ -109,13 +110,14 @@
       </div>
     </div>
     <div class="editor-wrapper">
-      <textarea class="editor" placeholder="Add your instructions of how to build or modify app here and press return. 
+      <textarea class="editor" placeholder="Add your instructions of how to build or modify app here and press return. ChatGPT will then attempt to build an app that meets your needs.
 
 Example prompts: 
   'build an app that shows a list of todo items'
   'Write an app that stores my name, birthday and favourite season of the year (make it a dropdown)'
 
-Press show/hide to see source code. 
+Once your app is available, you can modify the source or ask it to make changes.
+
 "></textarea>
 
     </div>
