pinning to 0.4.0 version of web5 js

--- a/generated-examples/todo/index.html
+++ b/generated-examples/todo/index.html
@@ -15,7 +15,7 @@
       <button type="submit" id="add-todo-btn">Add Todo</button>
     </form>
     <script type="module">
-      import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0-unstable.e6470ce-2023.4.01-19-39-11/dist/browser.mjs';
+      import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0/dist/browser.mjs';
       const web5 = new Web5();
 
       /* boilerplate start - required for every web5 app */    
