--- a/generated-examples/seasons/index.html
+++ b/generated-examples/seasons/index.html
@@ -28,7 +28,7 @@
     <script type="module">
       import {
         Web5
-      } from "https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1-unstable.e2dfe57-2023.3.23-19-07-37/dist/browser.mjs";
+      } from "https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0/dist/browser.mjs";
 
       const web5 = new Web5();
 
