--- a/generated-examples/todo-with-wallet/index.html
+++ b/generated-examples/todo-with-wallet/index.html
@@ -28,7 +28,7 @@
     <script type="module">
 
       /* boilerplate start - required for every web5 app */
-      import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0-unstable.e6470ce-2023.4.01-19-39-11/dist/browser.mjs';
+      import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0/dist/browser.mjs';
 
       const web5 = new Web5();
       let myDid = '';
