--- a/seed_app.html
+++ b/seed_app.html
@@ -10,7 +10,7 @@
   <h>{TBD logo}</h>  
   <script type="module">
 
-    import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.3.1-unstable.e2dfe57-2023.3.23-19-07-37/dist/browser.mjs';
+    import { Web5 } from 'https://cdn.jsdelivr.net/npm/@tbd54566975/web5@0.4.0/dist/browser.mjs';
 
     const web5 = new Web5();
 
