feat: add generate button
- refactored css so that scrollbars don't show up
 - added a dropshadow to the preview for better visual distinction
 - autofocus textarea
 - added a button handler

--- a/index.html
+++ b/index.html
@@ -10,102 +10,103 @@
     <link rel="icon" href="https://www.tbd.website/images/tbd-fav-icon-main.png" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
 
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
+    <style type="text/css" media="screen">
+      * {
         margin: 0;
       }
 
-      .main-wrapper {
-        flex: 1;
+      iframe,
+      textarea {
+        border: none;
+      }
+
+      body {
         display: flex;
-        overflow: hidden;
-      }
-
-      .preview-wrapper {
-        flex: 1;
-        padding: 0px;
-        box-sizing: border-box;
-        overflow: auto;
-      }
-
-      .preview {
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-
-      .output-wrapper {
-        flex: 1;
-        padding: 20px;
-        box-sizing: border-box;
-        overflow: auto;
-        display: none;
-      }
-
-      .output {
-        width: 100%;
-        height: 100%;
-        border: none;
-        resize: none;
+        flex-direction: column;
+        height: 95vh;
         font-family: monospace;
-        font-size: 16px;
       }
 
-      .editor-wrapper {
-        height: 200px;
-        border-top: 1px solid #ccc;
-        padding: 20px;
-        box-sizing: border-box;
-        overflow: auto;
-      }
-
+      label,
+      .docs,
       .editor {
-        width: 100%;
-        height: 100%;
-        border: none;
-        resize: none;
-        font-family: monospace;
         font-size: 16px;
       }
 
-      .docs {
-        font-family: monospace;
-        font-size: 16px;
-      }
-
-      .footer {
+      footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
         background-color: #f8f9fa;
         color: #6c757d;
-        padding: 10px 20px;
         position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
         border-top: 1px solid #dee2e6;
+        padding: 10px 20px;
       }
 
-      .footer a {
+      footer a {
         color: #6c757d;
         text-decoration: none;
         margin: 0 10px;
       }
 
-      .footer a:hover {
+      footer a:hover {
         text-decoration: underline;
+        background-color: #ff0;
       }
 
+      /** layout **/
+      .main-wrapper {
+        flex: 1;
+        display: flex;
+        background: #ff0;
+      }
+
+      .preview-wrapper,
+      .output-wrapper {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
+      }
+
+      .editor,
+      .output {
+        flex: 1;
+        justify-content: space-between;
+        padding: 10px;
+      }
+
+      .editor {
+        border: 1px solid gray;
+        flex: 1;
+      }
+
+      .output {
+        border: 1px solid gray;
+        background-color: #eee;
+      }
+
+      .editor-wrapper {
+        height: 150px;
+        display: flex;
+        padding: 10px 5px;
+      }
+
+      .output-wrapper {
+        display: none;
+        box-shadow: 5px 5px 20px #b5b500;
+      }
+
+      /** loading indicator **/
       .activity-container {
         width: 100%;
         height: 30px;
         background-color: #f3f3f3;
         position: relative;
-        visibility: hidden;
+        display: none;
       }
 
       .activity-bar {
@@ -127,6 +128,17 @@
           left: 0;
         }
       }
+
+      /** font styles **/
+       .bold {
+        font-weight: 700;
+      }
+
+      .generateButton {
+        margin: 0 0 0 5px;
+        font-family: 'Press Start 2P', cursive;
+        background-color: #ff0;
+      }
     </style>
   </head>
   <body>
@@ -145,8 +157,14 @@
         <textarea class="output"></textarea>
       </div>
     </div>
+
+    <div class="activity-container">
+      <div class="activity-bar"></div>
+    </div>
+
     <div class="editor-wrapper">
       <textarea
+        autofocus="true"
         class="editor"
         placeholder="Add your instructions of how to build or modify app here and press return. ChatGPT will then attempt to build an app that meets your needs.
 
@@ -154,13 +172,8 @@ Example prompts:
   'build an app that shows a list of todo items'
   'Write an app that stores my name, birthday and favourite season of the year (make it a dropdown)'
 
-Once your app is available, you can modify the source or ask it to make changes.
-
-"></textarea>
-    </div>
-
-    <div class="activity-container">
-      <div class="activity-bar"></div>
+Once your app is available, you can modify the source or ask it to make changes."></textarea>
+      <input id="generate" class="generateButton" type="button" value="Generate">
     </div>
 
     <div class="editor-wrapper">
@@ -171,9 +184,9 @@ Once your app is available, you can modify the source or ask it to make changes.
       </div>
     </div>
 
-    <div class="footer">
+    <footer>
       <div class="docs">
-        Try some pre made apps:
+        <span class="bold">Try some pre made apps:</span>
         <a
           class="docs"
           href="https://codesandbox.io/s/github/TBD54566975/web5-omg/tree/main/generated-examples/todo"
@@ -191,7 +204,7 @@ Once your app is available, you can modify the source or ask it to make changes.
       <div class="docs">
         <a href="/component-builder" target="_blank">👉 Show web⑤ component builder</a>
       </div>
-    </div>
+    </footer>
 
     <script>
       const editor = document.querySelector('.editor');
@@ -199,10 +212,11 @@ Once your app is available, you can modify the source or ask it to make changes.
       const output = document.querySelector('.output');
       const outputWrapper = document.querySelector('.output-wrapper');
       const toggleOutputBtn = document.getElementById('toggle-output');
+      const generateBtn = document.getElementById("generate");
 
       toggleOutputBtn.addEventListener('change', event => {
         if (event.target.checked) {
-          outputWrapper.style.display = 'block';
+          outputWrapper.style.display = 'flex';
         } else {
           outputWrapper.style.display = 'none';
         }
@@ -212,33 +226,36 @@ Once your app is available, you can modify the source or ask it to make changes.
       editor.addEventListener('keydown', e => {
         if (e.key === 'Enter') {
           // prevent the default behavior of the enter key
-          e.preventDefault();
-
-          // show that the browser is busy
-          editor.style.cursor = 'wait';
-          document.querySelector('.activity-container').style.visibility = 'visible';
-
-          fetch('/prompt', {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-              prompt: editor.value,
-              context_html: output.value,
-            }),
-          })
-            .then(response => response.text())
-            .then(text => {
-              output.value = text;
-              preview.contentDocument.open();
-              preview.contentDocument.write(output.value);
-              preview.contentDocument.close();
-              // make cursor not busy
-              editor.style.cursor = 'auto';
-              document.querySelector('.activity-container').style.visibility = 'hidden';
-            });
+          event.preventDefault();
+          generateBtn.click();
         }
+      });
+
+      generateBtn.addEventListener('click', e => {
+        // show that the browser is busy
+        editor.style.cursor = 'wait';
+        document.querySelector('.activity-container').style.display = 'block';
+
+        fetch('/prompt', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            prompt: editor.value,
+            context_html: output.value,
+          }),
+        })
+          .then(response => response.text())
+          .then(text => {
+            output.value = text;
+            preview.contentDocument.open();
+            preview.contentDocument.write(output.value);
+            preview.contentDocument.close();
+            // make cursor not busy
+            editor.style.cursor = 'auto';
+            document.querySelector('.activity-container').style.display = 'none';
+          });
       });
 
       output.addEventListener('input', () => {
