fix: expand iframe to fit generated content

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
         margin: 0;
       }
 
-      iframe,
-      textarea {
-        border: none;
-      }
-
       body {
         display: flex;
         flex-direction: column;
         height: 95vh;
         font-family: monospace;
+      }
+
+      iframe,
+      textarea {
+        border: none;
+      }
+
+      iframe {
+        flex: 1;
       }
 
       label,
