--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       .docs,
       .editor {
         font-size: 16px;
+        font-family: monospace;
+      }
+
+      .output {
+        font-size: 14px;
+        font-family: monospace;
       }
 
       footer {
