--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
     <link rel="icon" href="https://www.tbd.website/images/tbd-fav-icon-main.png" />
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&amp;display=swap" rel="stylesheet" />
 
     <style type="text/css" media="screen">
       * {
         margin: 0;
-      }
-
-      iframe,
-      textarea {
-        border: none;
       }
 
       body {
@@ -27,10 +22,25 @@
         font-family: monospace;
       }
 
+      iframe,
+      textarea {
+        border: none;
+      }
+
+      iframe {
+        flex: 1;
+      }
+
       label,
       .docs,
       .editor {
         font-size: 16px;
+        font-family: monospace;
+      }
+
+      .output {
+        font-size: 14px;
+        font-family: monospace;
       }
 
       footer {
@@ -130,7 +140,7 @@
       }
 
       /** font styles **/
-       .bold {
+      .bold {
         font-weight: 700;
       }
 
@@ -173,7 +183,7 @@ Example prompts:
   'Write an app that stores my name, birthday and favourite season of the year (make it a dropdown)'
 
 Once your app is available, you can modify the source or ask it to make changes."></textarea>
-      <input id="generate" class="generateButton" type="button" value="Generate">
+      <input id="generate" class="generateButton" type="button" value="Generate" />
     </div>
 
     <div class="editor-wrapper">
@@ -212,8 +222,9 @@ Once your app is available, you can modify the source or ask it to make changes.
       const output = document.querySelector('.output');
       const outputWrapper = document.querySelector('.output-wrapper');
       const toggleOutputBtn = document.getElementById('toggle-output');
-      const generateBtn = document.getElementById("generate");
+      const generateBtn = document.getElementById('generate');
 
+      toggleOutputBtn.checked = false;
       toggleOutputBtn.addEventListener('change', event => {
         if (event.target.checked) {
           outputWrapper.style.display = 'flex';
